--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "datocms-plugin-json-table",
   "homepage": "https://github.com/voorhoede/datocms-plugin-json-table",
   "version": "1.0.0",
-  "description": "Make it possible to add/insert a key and value to output simple json",
+  "description": "A plugin for DatoCMS that makes it possible to add/insert a key and value and output a simple JSON table",
   "main": "index.js",
   "scripts": {
     "start": "NODE_ENV=development webpack-dev-server --port 5000",
     "build": "NODE_ENV=production webpack --progress",
     "addToProject": "yo datocms-plugin:add-to-project",
-    "prepublishOnly": "rimraf lib dist && mkdir dist && npm run dist",
+    "prepublishOnly": "rimraf lib dist && mkdir dist && npm run build",
     "lint": "eslint \"./src/*.js\"",
     "test": "echo 1"
   },
@@ -23,7 +23,8 @@
   ],
   "files": [
     "dist",
-    "docs"
+    "docs",
+    "lib"
   ],
   "author": "Voorhoede",
   "license": "MIT",
