Update package.json to show dato cover image

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "datocms-plugin-json-table",
   "homepage": "https://github.com/voorhoede/datocms-plugin-json-table",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "A plugin for DatoCMS that makes it possible to add/insert a key and value and output a simple JSON table",
   "main": "index.js",
   "scripts": {
@@ -30,7 +30,7 @@
   "datoCmsPlugin": {
     "title": "JSON Table",
     "previewImage": "docs/preview.gif",
-    "coverImage": "docs/cover.png",
+    "coverImage": "docs/cover.jpg",
     "entryPoint": "dist/index.html",
     "pluginType": "field_editor",
     "fieldTypes": [
