--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "datocms-plugin-json-table",
   "homepage": "https://github.com/voorhoede/datocms-plugin-json-table",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "A plugin for DatoCMS that makes it possible to add/insert a key and value and output a simple JSON table",
   "scripts": {
     "start": "cross-env BROWSER='none' PUBLIC_URL='/' react-scripts start",
@@ -52,6 +52,7 @@
     "cross-env": "^7.0.3"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.178",
     "@types/node": "^16.11.14",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
