--- a/package.json
+++ b/package.json
@@ -10,9 +10,28 @@
     "start": "cross-env BROWSER='none' PUBLIC_URL='/' react-scripts start",
     "build": "cross-env PUBLIC_URL='.' react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "prepublishOnly": "npm run build"
+    "prepack": "npm run build",
+    "postversion": "git push --follow-tags"
   },
+  "dependencies": {
+    "@types/lodash": "^4.14.192",
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.33",
+    "@types/react-dom": "^18.0.11",
+    "datocms-plugin-sdk": "^0.7.4",
+    "datocms-react-ui": "^0.7.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "typescript": "^4.9.5"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3",
+    "react-scripts": "^5.0.1"
+  },
+  "files": [
+    "build",
+    "docs"
+  ],
   "keywords": [
     "datocms",
     "datocms-plugin",
@@ -22,12 +41,12 @@
     "json-table",
     "json"
   ],
-  "files": [
-    "build",
-    "docs"
-  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/voorhoede/datocms-plugin-json-table.git"
+  },
   "author": "Voorhoede",
-  "license": "MIT",
+  "license": "ISC",
   "datoCmsPlugin": {
     "title": "JSON Table",
     "previewImage": "docs/preview.gif",
@@ -50,20 +69,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "cross-env": "^7.0.3",
-    "react-scripts": "^5.0.1"
-  },
-  "dependencies": {
-    "@types/lodash": "^4.14.192",
-    "@types/node": "^18.15.11",
-    "@types/react": "^18.0.33",
-    "@types/react-dom": "^18.0.11",
-    "datocms-plugin-sdk": "^0.7.4",
-    "datocms-react-ui": "^0.7.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "typescript": "^4.9.5"
   }
 }
