--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,7 @@
 [build]
   command = "npm run build"
   publish = "build/"
+  [build.environment]
+    NODE_VERSION="16"
   [build.processing]
     skip_processing = true
