--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "datocms-plugin-json-table",
   "homepage": "https://github.com/voorhoede/datocms-plugin-json-table",
-  "version": "2.0.5",
+  "version": "2.0.6",
   "description": "A plugin for DatoCMS that makes it possible to add/insert a key and value and output a simple JSON table",
   "engines": {
     "node": ">=18.0.0"
@@ -32,6 +32,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "husky": "^8.0.3",
+    "prettier": "^3.0.1",
     "react-scripts": "^5.0.1"
   },
   "files": [
