--- a/package.json
+++ b/package.json
@@ -7,33 +7,40 @@
     "node": ">=18.0.0"
   },
   "scripts": {
-    "start": "cross-env BROWSER='none' PUBLIC_URL='/' react-scripts start",
-    "build": "cross-env PUBLIC_URL='.' react-scripts build",
-    "test": "react-scripts test",
+    "start": "cross-env BROWSER='none' PUBLIC_URL='/' webpack-dev-server --mode=development",
+    "build": "cross-env PUBLIC_URL='.' webpack --mode=production",
     "prettier": "prettier --write .",
     "pre-commit": "npm run prettier",
     "prepack": "npm run build",
-    "prepare": "husky install",
+    "prepare": "husky",
     "postversion": "git push --follow-tags"
   },
   "dependencies": {
-    "@types/lodash": "^4.14.197",
-    "@types/node": "^20.4.9",
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
-    "datocms-plugin-sdk": "^0.7.14",
-    "datocms-react-ui": "^0.7.14",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "typescript": "^4.9.5"
+    "@types/lodash": "^4.17.7",
+    "@types/node": "^20.14.12",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "datocms-plugin-sdk": "^1.1.0",
+    "datocms-react-ui": "^1.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "typescript": "^5.5.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.9",
+    "@babel/preset-env": "^7.24.8",
+    "@babel/preset-react": "^7.24.7",
     "cross-env": "^7.0.3",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "husky": "^8.0.3",
-    "prettier": "^3.0.1",
-    "react-scripts": "^5.0.1"
+    "css-loader": "^7.1.2",
+    "eslint-plugin-prettier": "^5.2.1",
+    "html-webpack-plugin": "^5.6.0",
+    "husky": "^9.1.2",
+    "mini-css-extract-plugin": "^2.9.0",
+    "prettier": "^3.3.3",
+    "ts-loader": "^9.5.1",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   },
   "files": [
     "build",
